Footer styling revision.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="main" class="container">
 	<div ui-view ng-animate-children></div>
 </div>
-<footer class="clearfix">
+<footer  class="text-center clearfix">
 	<div class="box text-center">
 		<p>
 			<i class="fa fa-bars" aria-hidden="true"></i>
