--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 <script src="./controllers/teaching.js"></script>
 <script src="./controllers/classMaterials.js"></script>
 <script src="./controllers/research.js"></script>
-<script src="./controllers/presentations.js"></script>
 <script src="./controllers/references.js"></script>
 <script src="./controllers/cv.js"></script>
 <!-- Directives -->
+<script src="./components/imgonload.js"></script>
 
 </body>
 
