--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 <script src="./controllers/menu.js"></script>
 <script src="./controllers/main.js"></script>
 <script src="./controllers/home.js"></script>
-<script src="./controllers/experience.js"></script>
 <script src="./controllers/teaching.js"></script>
 <script src="./controllers/classMaterials.js"></script>
 <script src="./controllers/research.js"></script>
 <script src="./controllers/references.js"></script>
+<script src="./controllers/feedback.js"></script>
 <script src="./controllers/cv.js"></script>
 <!-- Directives -->
 <script src="./components/imgonload.js"></script>
