education page has added.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <script src="./controllers/teaching.js"></script>
 <script src="./controllers/classMaterials.js"></script>
 <script src="./controllers/research.js"></script>
+<script src="./controllers/education.js"></script>
 <script src="./controllers/references.js"></script>
 <script src="./controllers/feedback.js"></script>
 <script src="./controllers/cv.js"></script>
