--- a/index.html
+++ b/index.html
@@ -1,63 +1,71 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link href="images/profile.ico" rel="shortcut icon" type="image/x-icon">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Irina Zotova</title>
-	<!--<base href="/">-->
-	<!-- Style sheets -->
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/app.css" />
-	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Old+Standard+TT" />
+  <head lang="en">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link href="images/profile.ico" rel="shortcut icon" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Irina Zotova</title>
+    <!--<base href="/">-->
+    <!-- Style sheets -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="css/app.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=Old+Standard+TT"
+    />
+  </head>
+  <body id="iZotova" class="ng-cloak" ng-app="iZotova">
+    <header ng-include="'views/menu.html'"></header>
+    <div id="main" class="container">
+      <div ui-view ng-animate-children></div>
+    </div>
+    <footer class="text-center clearfix">
+      <div class="box text-center">
+        <p>
+          <i class="fa fa-bars" aria-hidden="true"></i>
+          &nbsp; &nbsp; &nbsp;2021 &nbsp;&nbsp;
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </p>
+      </div>
+    </footer>
 
-</head>
-<body id="iZotova" class="ng-cloak" ng-app="iZotova">
-<header ng-include="'views/menu.html'" ></header>
-<div id="main" class="container">
-	<div ui-view ng-animate-children></div>
-</div>
-<footer  class="text-center clearfix">
-	<div class="box text-center">
-		<p>
-			<i class="fa fa-bars" aria-hidden="true"></i>
-			&nbsp; &nbsp; &nbsp;2018 &nbsp;&nbsp;
-			<i class="fa fa-bars" aria-hidden="true"></i>
-		</p>
-	</div>
-</footer>
+    <!-- Library Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-animate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"></script>
 
-
-<!-- Library Scripts -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-animate.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"></script>
-
-<!-- Application Script -->
-<script src="./app.js"></script>
-<script src="./routes.js"></script>
-<!-- Services -->
-<script src="./services/constants.js"></script>
-<script src="./services/run.js"></script>
-<!-- Controllers -->
-<script src="./controllers/menu.js"></script>
-<script src="./controllers/main.js"></script>
-<script src="./controllers/home.js"></script>
-<script src="./controllers/teaching.js"></script>
-<script src="./controllers/classMaterials.js"></script>
-<script src="./controllers/research.js"></script>
-<script src="./controllers/education.js"></script>
-<script src="./controllers/references.js"></script>
-<script src="./controllers/feedback.js"></script>
-<script src="./controllers/cv.js"></script>
-<!-- Directives -->
-<script src="./components/imgonload.js"></script>
-
-</body>
-
+    <!-- Application Script -->
+    <script src="./app.js"></script>
+    <script src="./routes.js"></script>
+    <!-- Services -->
+    <script src="./services/constants.js"></script>
+    <script src="./services/run.js"></script>
+    <!-- Controllers -->
+    <script src="./controllers/menu.js"></script>
+    <script src="./controllers/main.js"></script>
+    <script src="./controllers/home.js"></script>
+    <script src="./controllers/teaching.js"></script>
+    <script src="./controllers/classMaterials.js"></script>
+    <script src="./controllers/research.js"></script>
+    <script src="./controllers/education.js"></script>
+    <script src="./controllers/references.js"></script>
+    <script src="./controllers/feedback.js"></script>
+    <script src="./controllers/cv.js"></script>
+    <!-- Directives -->
+    <script src="./components/imgonload.js"></script>
+  </body>
 </html>
