--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       href="//fonts.googleapis.com/css?family=Old+Standard+TT"
     />
   </head>
-  <body id="iZotova" class="ng-cloak" ng-app="iZotova">
+  <body id="iZotova" class="ng-cloak" ng-app="iZotova" onload="onBodyLoad()">
     <header ng-include="'views/menu.html'"></header>
     <div id="main" class="container">
       <div ui-view ng-animate-children></div>
@@ -34,7 +34,7 @@
       <div class="box text-center">
         <p>
           <i class="fa fa-bars" aria-hidden="true"></i>
-          &nbsp; &nbsp; &nbsp;2021 &nbsp;&nbsp;
+          <span id="currentYear" style="margin: 0 5px"></span>
           <i class="fa fa-bars" aria-hidden="true"></i>
         </p>
       </div>
@@ -67,5 +67,11 @@
     <script src="./controllers/cv.js"></script>
     <!-- Directives -->
     <script src="./components/imgonload.js"></script>
+    <script>
+      function onBodyLoad() {
+        document.getElementById("currentYear").innerHTML =
+          new Date().getFullYear();
+      }
+    </script>
   </body>
 </html>
